force-app/main/default/objects/Potion_Review__c/Potion_Review__c.object-meta.xml
<CustomObject>
    
    <label>Potion Review</label>
    <nameField>
        <displayFormat>RID-{0000}</displayFormat>
        <label>Potion Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potion Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>