force-app/main/default/objects/Potion_Review__c/fields/Potion__c.field-meta.xml
<CustomField>
    <fullName>Potion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Potion</label>
    <referenceTo>Potion__c</referenceTo>
    <relationshipLabel>Potion Reviews (Potion)</relationshipLabel>
    <relationshipName>Potion_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>