force-app/main/default/objects/Potion_Review__c/fields/Potion_Type__c.field-meta.xml
<CustomField>
    <fullName>Potion_Type__c</fullName>
    <label>Potion Type</label>
    <referenceTo>Potion__c</referenceTo>
    <relationshipLabel>Potion Reviews</relationshipLabel>
    <relationshipName>Potion_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>