force-app/main/default/objects/Potion_Review__c/fields/Review_Message__c.field-meta.xml
<CustomField>
    <fullName>Review_Message__c</fullName>
    <label>Review Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>