force-app/main/default/objects/Potion_Review__c/fields/Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Review_Rating__c</fullName>
    <inlineHelpText>How would you rate this product? Rank 0-5 with 0 being the worst and 5 being the best.</inlineHelpText>
    <label>Review Rating</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>