force-app/main/default/objects/Potion_Review__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <label>Reviewer Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>