force-app/main/default/objects/Potion_Review__c/validationRules/Review_Rating_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_Rating_Validation</fullName>
    <active>true</active>
    <description>Used to ensure the users puts in a valid rating for the review</description>
    <errorConditionFormula>NOT(Review_Rating__c == 0 || Review_Rating__c == 1  || Review_Rating__c == 2 || Review_Rating__c == 3 || Review_Rating__c == 4 || Review_Rating__c == 5)</errorConditionFormula>
    <errorDisplayField>Review_Rating__c</errorDisplayField>
    <errorMessage>Rating must be a whole number value between 0 and 5</errorMessage>
</ValidationRule>