force-app/main/default/objects/Potion_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Review_Message__c</columns>
    <columns>Review_Rating__c</columns>
    <columns>Reviewer_Name__c</columns>
    <columns>Potion_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>